# Repo-level Python tooling configuration.
#
# This file currently only configures pytest discovery for the build harness
# unit tests. The repo's primary build system is CumulusCI (cumulusci.yml),
# not Python packaging, so there is no [project] table here on purpose.

[tool.build_harness]
# Harness/TUI uses enum.StrEnum (Python 3.11+).
requires_python = ">=3.11"

[tool.pytest.ini_options]
# Scope discovery to pytest-style test suites. Currently: build-harness and
# txn-data-harness. The build-harness suite requires
# `pip install -r scripts/build_harness/tui/requirements.txt`; the txn-data-harness
# suite additionally requires `requests` and `PyYAML`
# (`pip install requests PyYAML`).
# (Or use .harness/tui-venv/bin/python — see docs/guides/build-harness.md § Tests.)
# Top-level tests/*.py (e.g. tests/test_fix_scratch_identity.py) follow
# this repo's lightweight self-contained convention: they use an internal check()
# aggregator (not assert) and gate via main()'s exit code, so they are run
# directly (`python tests/<name>.py`), NOT collected by pytest — under pytest
# their test_* functions would false-pass since the checks never raise.
testpaths = ["tests/build_harness", "tests/txn_data_harness"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",      # short test summary for non-passing tests
    "--strict-markers",
]
